@@ -4,10 +4,13 @@ Changes in JMurmel-1.4.6 relative to JMurmel-1.4.5
  * changed mlib: renamed the functions last0, last1, lastn to m%last0, m%last1, m%lastn
 
  * added #1= style labelled forms to the reader
+ * added tailrecursion->loop transformation:
+   transform the innermost tail recursion/ named let/ let* /letrec into a loop
 
  * mlib: added values as a place for setf
 
- * transform the innermost tail recursion/ named let/ let* /letrec into a loop
+ * fixed compiled (list* 1 2 3 (values 4 5)) and (list 1 2 3 (values 4 5))
+   was: would display multiple values in the REPL
 
 
 Changes in JMurmel-1.4.5 relative to JMurmel-1.4.4
